@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: incr-old.test,v 1.5 2000/04/10 17:19:00 ericm Exp $
+# RCS: @(#) $Id: incr-old.test,v 1.1 2000/12/28 07:11:50 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -62,7 +62,8 @@ test incr-old-2.5 {incr errors} {
     set x 123
     list [catch {incr x 1a} msg] $msg $errorInfo
 } {1 {expected integer but got "1a"} {expected integer but got "1a"
-    while executing
+    (reading increment)
+    invoked from within
 "incr x 1a"}}
 test incr-old-2.6 {incr errors} {
     proc readonly args {error "variable is read-only"}
